# irodori-extension-motherduck

./: Cargo.toml  Makefile  README.md  connector.config.json  connector.source.json  irodori.extension.json
.github/workflows/: ci.yml
native/source/: README.md
src/: driver.rs  lib.rs
